# AdobeAIR-DiscordRPC

./: LICENSE.TXT  README.md
.github/workflows/: build-ext.yml
AS3/: extension.xml
C/AdobeAIR-DiscordRPC/: CMakeLists.txt  dllmain.c  framework.h
